# Homeworks_python

./: .gitignore  readme.md  requirements.txt
.run/: main.run.xml
corse_work/: app.py  commands.py  config.py  dataJSON.json  docker-compose.yml  requirements.txt
corse_work/migrations/versions/: 3c48859de6dd_.py  811f25d955f8_.py  ae5681851b92_.py
corse_work/static/css/: Keyboard.css
corse_work/static/js/: Keyboard.js
corse_work/templates/: base.html
corse_work/templates/admin/: add_default.html  base.html  register.html
coursework/: app.py  forms.py
coursework/templates/: base.html
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: jsonplaceholder_requests.py  main.py  models.py
homework_04/templates/: base.html  index.html
homework_05/: Dockerfile  app.py
homework_05/templates/: about.html
homework_06/: DataJSON.json  docker-compose.yml
homework_06/web-app/: Dockerfile  app.py  config.py  entrypoint.sh  pyproject.toml
homework_06/web-app/migrations/versions/: 12b547213bc4_.py  1b4c5f26281d_.py  3903ceb5013b_.py  408bc8bfcbdb_.py  548c2526258c_.py  6b081af88e54_.py  8122a347d7c3_.py  8dffaa12445f_.py  a80f2b8f358e_.py  ab67193f73cf_.py  bf2a1443766b_.py  da120f0ab991_.py  dd19bb922023_.py  e53bd71cdc20_.py
homework_06/web-app/templates/: index.html
homework_06/web-app/templates/admin/: base.html  data.html  index.html
homework_06/web-app/web_app/models/: __init__.py  product.py  trial_data.py
homework_06/web-app/web_app/views/: __init__.py  admin.py
homework_10/: DataJSON.json
(+83 files in other folders)
